--- a/package.json
+++ b/package.json
@@ -9,18 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~3.2.1",
+    "@expo/metro-runtime": "~3.2.3",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "~51.0.14",
+    "expo": "~51.0.28",
     "expo-font": "~12.0.7",
     "expo-status-bar": "~1.12.1",
+    "node-fetch": "^3.3.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.5",
     "react-native-flip-card": "^3.5.7",
     "react-native-reanimated": "^3.10.1",
     "react-native-reanimated-carousel": "^3.5.1",
-    "react-native-svg": "^15.3.0",
+    "react-native-svg": "15.2.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-native-web": "~0.19.10"
   },
